# sineat

./: .gitignore  README.md  dummy_user.sql
Sprint 1/Phase 1/: plan-type-cdc.txt
Sprint 1/Phase 3/: bdd.sql
Sprint 1/Phase 3/backend/: app_api.py  config.ini  creer_config.py  db_mapping.py  exemple_connection_a_bdd.py  html_de_test.html  package-lock.json  pyproject.toml  test.py
Sprint 1/Phase 3/backend/app_backend/: app_api.py  app_cli.py  config.ini  db_mapping.py  exemple_connection_a_bdd.py
Sprint 1/Phase 3/frontend/: README_frontend.md  package-lock.json  package.json
Sprint 1/Phase 3/sql/: README-BDD.md  bdd.sql  bdd_avec_.mwb  dummy_"collection".sql  dummy_"user".sql  dummy_abonnement.py  dummy_abonnement.sql  dummy_collection.py  dummy_collection.sql  dummy_contenu_collection.py  dummy_contenu_collection.sql  dummy_enregistrement_post.py  dummy_enregistrement_post.sql  dummy_est_commentaire_de.py  dummy_est_commentaire_de.sql  dummy_etablissement.py  dummy_etablissement.sql  dummy_etablissement_de_type.py  dummy_etablissement_de_type.sql  dummy_liked_collection.py  dummy_liked_collection.sql  dummy_liked_post.py  dummy_liked_post.sql  dummy_mot_cle.py  dummy_mot_cle.sql  dummy_mot_cle_post.py  dummy_mot_cle_post.sql  dummy_note.py  dummy_note.sql  dummy_note_concerne.py  dummy_note_concerne.sql  dummy_post.py  dummy_post.sql  dummy_regime.py  dummy_regime.sql  dummy_regime_etablissement.py  (+12 more)
Sprint 2/Phase 1/: Cahier des charges - Sprint 2.docx  Rapport de sprint 2.docx  elements-cdc.md
Sprint 2/Phase 2/: elements-analyse.txt
(+226 files in other folders)
