[tool.poetry]
name = "app_backend"
version = "0.1.0"
description = ""
authors = ["AloisGoeury <alois.goeury@mines-albi.fr>"]
readme = "README-API.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.95.0"
psycopg2 = "2.9.6"
pydantic = "1.10.7"
SQLAlchemy = "2.0.16"
SQLAlchemy-Utils = "0.41.1"
typer = "0.9.0"
uvicorn = "0.21.1"
bcrypt = "^4.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.scripts]
app_backend = 'app_backend.app_cli:app_cli'

[build-system]
requires = ["poetry-core"]
build-app_backend = "poetry.core.masonry.api"